# aicc

./: CAR_STATS.md  Makefile  README.md  TODO.md  system-overview.dia
drive-core/: Cargo.toml  Makefile  README.md
drive-core/src/: error.rs  main.rs  pwm_driver.rs  variable.rs
drive-core/systemd/: drive-core.service
drive-remote/: Cargo.toml  Makefile
drive-remote/src/: gamepad_device.rs  input_device.rs  inputs.rs  keyboard_device.rs  main.rs
logger/: Cargo.toml  Makefile  README.md
logger/src/: log_stream.rs  main.rs  stream_manager.rs
logger/systemd/: aicc-logger.service
make/: build.mk  variables.mk
messages/: Cargo.toml  Makefile
messages/src/: drive_core.rs  lib.rs  logger.rs
scripts/: i2c-pwm  wifi-power-save
stm32/: .mxproject  CMakeLists.txt  platformio.ini  stm32.ioc
stm32/EWARM/: Project.eww  stm32.ewd  stm32.ewp
stm32/Inc/: usart.h
stm32/Src/: main.c  stm32f3xx_hal_msp.c  usart.c
util/: Cargo.toml  Makefile
util/src/: lib.rs  variable.rs
util/src/logging/: connect.rs  data_types.rs  mod.rs
util/src/mesh/: mod.rs
util/src/timing/: mod.rs
